updated the register logic