@@ -2,6 +2,7 @@ package com.backend.licenta.user.model;
 
 import jakarta.persistence.*;
 import lombok.Data;
+import lombok.Getter;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
@@ -16,13 +17,12 @@ public class User implements UserDetails {
     private Long id;
     private String email;
     private String password;
-
-    @Enumerated(EnumType.STRING)
-    private Role role;
+    private String firstName;
+    private String lastName;
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return List.of(); // sau Collections.emptyList();
     }
 
     @Override
